src/test/ui/error-codes/E0221.stderr
error[E0221]: ambiguous associated type `A` in bounds of `Self`
  --> $DIR/E0221.rs:21:16
   |
15 |     type A: T1;
   |     ----------- ambiguous `A` from `Foo`
...
19 |     type A: T2;
   |     ----------- ambiguous `A` from `Bar`
20 |     fn do_something() {
21 |         let _: Self::A;
   |                ^^^^^^^ ambiguous associated type `A`

error[E0221]: ambiguous associated type `Err` in bounds of `Self`
  --> $DIR/E0221.rs:31:16
   |
29 |     type Err: T3;
   |     ------------- ambiguous `Err` from `My`
30 |     fn test() {
31 |         let _: Self::Err;
   |                ^^^^^^^^^ ambiguous associated type `Err`
   |
note: associated type `Self` could derive from `std::str::FromStr`
  --> $DIR/E0221.rs:31:16
   |
31 |         let _: Self::Err;
   |                ^^^^^^^^^

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0221"
